<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPrincipal">

    <TextView
        android:id="@+id/perguntaAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta_ano"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <TextView
        android:id="@+id/tituloPrincipal"
        android:layout_width="247dp"
        android:layout_height="37dp"
        android:fontFamily="casual"
        android:text="@string/txt_tiulo_principal"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/perguntaNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta_nome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <EditText android:id="@+id/resposta_nome"
        android:layout_width="322dp"
        android:layout_height="71dp"
        android:ems="10"
        android:hint="@string/resposta_nome"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#673AB7"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        android:autofillHints="Exemplo" />

    <Button android:id="@+id/btn_calcular_idade"
        android:layout_width="133dp"
        android:layout_height="62dp"
        android:text="@string/btn_calcular_idade"
        android:textAlignment="center"
        android:textColorHighlight="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639"
        app:rippleColor="#03A9F4" />

    <Button android:id="@+id/btn_limpar_dados"
        android:layout_width="133dp"
        android:layout_height="62dp"
        android:text="@string/btn_limpar_dados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <EditText android:id="@+id/resultado"
        android:layout_width="322dp"
        android:layout_height="71dp"
        android:autofillHints="Resultado"
        android:ems="10"
        android:hint="@string/resultado"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <Button
        android:id="@+id/btn_sair"
        android:layout_width="133dp"
        android:layout_height="62dp"
        android:text="@string/btn_sair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <EditText
        android:id="@+id/resposta_ano"
        android:layout_width="322dp"
        android:layout_height="71dp"
        android:autofillHints="YYYY"
        android:ems="10"
        android:hint="@string/resposta_ano"
        android:inputType="number"
        android:text=""
        android:textColor="#673AB7"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />
</androidx.constraintlayout.widget.ConstraintLayout>